syntax = "proto3";
package wal_log;

message LogOffset {
    // offset of the last reveiced frame. If absent, the server should send frame 0.
    optional uint64 currentOffset = 1;
}

message HelloRequest { }

message HelloResponse {
    /// Uuid of the current generation
    string generation_id = 1;
    /// First frame index in the current generation
    uint64 generation_start_index = 2;
    /// Uuid of the database being replicated
    string database_id = 3;
}

message Frame {
    bytes data = 1;
}

service ReplicationLog {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
    rpc LogEntries(LogOffset) returns (stream Frame) {}
}
