syntax = "proto3";
package wal_log;

message LogOffset {
    uint64 startOffset = 1;
}

message WalLogEntry {
    uint64 index = 1;
    oneof Payload {
        Frame frame = 2;
        Commit commit = 3;
    }
}

message Frame {
    uint32 page_no = 1;
    bytes data = 2;
}

message Commit {
    int32 page_size = 1;
    uint32 size_after = 2;
    bool is_commit = 3;
    int32 sync_flags = 4;
}

service WalLog {
    rpc LogEntries(LogOffset) returns (stream WalLogEntry) {}
}
